[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Background/top_pipe-sheet0.png" type="Texture" id=1]
[ext_resource path="res://scripts/Cacti.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9.79585 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 53.5 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 2000 )

[node name="Cacti" type="Node2D"]
script = ExtResource( 2 )

[node name="bottom cactus" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="Sprite" type="Sprite" parent="bottom cactus"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom cactus"]
position = Vector2( 0, 4.78899 )
scale = Vector2( 3.33, 23.4578 )
shape = SubResource( 1 )

[node name="goal" type="Area2D" parent="."]
position = Vector2( 36, 0 )
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="goal"]
position = Vector2( 0, -293 )
shape = SubResource( 4 )

[node name="top cactus" type="Area2D" parent="."]
position = Vector2( 0, -585 )
collision_layer = 2
monitorable = false

[node name="Sprite2" type="Sprite" parent="top cactus"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="top cactus"]
scale = Vector2( 3.22171, 22.6446 )
shape = SubResource( 2 )

[node name="player_detector" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detector"]
position = Vector2( -388, -327 )
shape = SubResource( 3 )

[node name="player_exit_detector" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_exit_detector"]
position = Vector2( 416, -327 )
shape = SubResource( 3 )

[connection signal="body_entered" from="bottom cactus" to="." method="spiked"]
[connection signal="body_exited" from="goal" to="." method="_on_goal_body_exited"]
[connection signal="body_entered" from="top cactus" to="." method="spiked"]
[connection signal="body_entered" from="player_detector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="player_exit_detector" to="." method="_on_player_exit_detector_body_entered"]
